[package]
name = "combine"
version = "4.0.0-beta.2"
authors = ["Markus Westerlind <marwes91@gmail.com>"]

description = "Fast parser combinators on arbitrary streams with zero-copy support."

repository = "https://github.com/Marwes/combine"
documentation = "https://docs.rs/combine"

readme = "README.md"

keywords = ["parser", "parsing", "combinators", "ll"]

categories = ["parsing", "no-std"]

license = "MIT"

edition = "2018"

[lib]
name = "combine"
path = "src/lib.rs"

[dependencies]
byteorder = { version = "1.1.0", default-features = false }
either = { version = "1", default-features = false }
futures_03 = { version = "0.3", package = "futures", optional = true }
regex = { version = "1", optional = true }
memchr = { version = "2.2", default-features = false }
pin-project = { version = "0.4", optional = true }
tokio-02-dep = { version = "0.2", package = "tokio", optional = true }

[dev-dependencies]
criterion = { version = "0.3", default-features = false }
once_cell = "1.0"

futures = "0.1"
tokio-02-dep = { version = "0.2", features = ["fs", "io-driver", "io-util", "macros"], package = "tokio" }
tokio-io = "0.1"
tokio-codec-0-1 = { package = "tokio-codec", version = "0.1" }
bytes-0-4 = { package = "bytes", version = "0.4" }
partial-io = { version = "0.3", features = ["tokio", "quickcheck"] }
quickcheck = "0.6"
quick-error = "1.0"

[features]
default = ["std"]
# Run the mp4 benchmark, requires a mp4 file named `small.mp4` in the benches directory
mp4 = []
tokio-02 = ["futures_03", "pin-project", "tokio-02-dep"]
std = ["memchr/use_std", "either/use_std", "byteorder/std"]

[[bench]]
name = "json"
harness = false

[[bench]]
name = "http"
harness = false

[[bench]]
name = "mp4"
harness = false
required-features = ["mp4"]

[[example]]
name = "async"
required-features = ["std"]

[[example]]
name = "date"

[[example]]
name = "number"

[[example]]
name = "readme"

[[example]]
name = "ini"

[package.metadata.docs.rs]
all-features = true

[profile.bench]
lto = true
codegen-units = 1
