[package]
name = "combine-regex-1"
version = "1.0.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]

license = "MIT/Apache-2.0"

description = "Re-export of regex 1.0 letting combine use both 0.2 and 1.0"

repository = "https://github.com/Marwes/combine"

[dependencies]
regex = { version = "1", features = ["use_std"], default-features = false }
